[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameOver.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Sky.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Abilities.tres" type="SpriteFrames" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 320, 180 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Options" type="ItemList" parent="."]
editor/display_folded = true
margin_left = 280.0
margin_top = 140.0
margin_right = 360.0
margin_bottom = 220.0
select_mode = 1

[node name="Ability1" type="Button" parent="Options"]
editor/display_folded = true
margin_left = 3.0
margin_top = 4.0
margin_right = 37.0
margin_bottom = 38.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="Options/Ability1"]
position = Vector2( 17, 17 )
scale = Vector2( 1.5, 1.5 )
frames = ExtResource( 3 )
animation = "None"

[node name="Ability2" type="Button" parent="Options"]
editor/display_folded = true
margin_left = 42.0
margin_top = 4.0
margin_right = 76.0
margin_bottom = 38.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="Options/Ability2"]
position = Vector2( 17, 17 )
scale = Vector2( 1.5, 1.5 )
frames = ExtResource( 3 )
animation = "None"

[node name="Passive1" type="Button" parent="Options"]
editor/display_folded = true
margin_left = 3.0
margin_top = 43.0
margin_right = 37.0
margin_bottom = 77.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="Options/Passive1"]
position = Vector2( 17, 17 )
scale = Vector2( 1.5, 1.5 )
frames = ExtResource( 3 )
animation = "None"

[node name="Passive2" type="Button" parent="Options"]
editor/display_folded = true
margin_left = 42.0
margin_top = 43.0
margin_right = 76.0
margin_bottom = 77.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="Options/Passive2"]
position = Vector2( 17, 17 )
scale = Vector2( 1.5, 1.5 )
frames = ExtResource( 3 )
animation = "None"

[node name="RESTART" type="Button" parent="."]
visible = false
margin_left = 270.0
margin_top = 240.0
margin_right = 370.0
margin_bottom = 260.0
custom_colors/font_color = Color( 0.501961, 0, 1, 1 )
text = "RESTART"

[node name="QUIT" type="Button" parent="."]
visible = false
margin_left = 270.0
margin_top = 270.0
margin_right = 370.0
margin_bottom = 290.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "QUIT"

[node name="Instructions" type="Label" parent="."]
margin_left = 255.0
margin_top = 100.0
margin_right = 385.0
margin_bottom = 114.0
custom_colors/font_color = Color( 0.501961, 0, 1, 1 )
text = "Select what to keep."
align = 1
valign = 1
[connection signal="pressed" from="Options/Ability1" to="." method="_on_Ability1_pressed"]
[connection signal="pressed" from="Options/Ability2" to="." method="_on_Ability2_pressed"]
[connection signal="pressed" from="Options/Passive1" to="." method="_on_Passive1_pressed"]
[connection signal="pressed" from="Options/Passive2" to="." method="_on_Passive2_pressed"]
[connection signal="pressed" from="RESTART" to="." method="_on_RESTART_pressed"]
[connection signal="pressed" from="QUIT" to="." method="_on_QUIT_pressed"]
